--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     "48": "icon48.png",
     "128": "icon128.png"
   },
+  "background_page": "background.html",
   "content_scripts": [
     {
       "all_frames": true,
